Closed Bug 1016022 Opened 11 years ago Closed 11 years ago

Wifi tethering not restarted on unsolicited firmware restart

Categories

(Firefox OS Graveyard :: Wifi, defect)

x86
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(blocking-b2g:1.4+, firefox30 wontfix, firefox31 wontfix, firefox32 fixed, b2g-v1.4 fixed, b2g-v2.0 fixed)

RESOLVED FIXED
2.0 S3 (6june)
blocking-b2g 1.4+
Tracking Status
firefox30 --- wontfix
firefox31 --- wontfix
firefox32 --- fixed
b2g-v1.4 --- fixed
b2g-v2.0 --- fixed

People

(Reporter: m1, Assigned: m1)

Details

(Whiteboard: [caf priority: p2][cr 661502])

Attachments

(1 file, 1 obsolete file)

As a part of supporting wifi coexistence with other RATS, wifi firmware can sometimes intentionally clear the IFF_RUNNING running flag on the wlan0 interface when it detects a band conflict. The framework is then expected to shutdown and restart the wifi tethering session, which as a side effect will cause a different wifi channel to be selected. Any active wifi tethering clients at the time will see this as a momentary lose of the network. Currently when the wifi firmware takes this action Gecko does nothing. The wifi tethering connection is now not live, but all indications to the user remain that it's fine. The user needs to then manually toggle tethering off/on to recover.
Attached patch v1 (obsolete) — Splinter Review
Attachment #8428808 - Flags: review?(vchang)
Hi Michael, Since you already provided patch, would you mind taking this bug? Feel free to re-assign if it's not the plan.
Assignee: nobody → mvines
Comment on attachment 8428808 [details] [diff] [review] v1 Review of attachment 8428808 [details] [diff] [review]: ----------------------------------------------------------------- ::: dom/system/gonk/NetworkUtils.cpp @@ +188,5 @@ > NetworkUtils::usbTetheringSuccess > }; > > CommandFunc NetworkUtils::sUSBFailChain[] = { > + NetworkUtils::clearWifiTetherParms, Do we need this here ?
Attachment #8428808 - Flags: review?(vchang)
(In reply to Vincent Chang[:vchang] from comment #3) > Do we need this here ? Err...nope!
Attached patch v2Splinter Review
Attachment #8428808 - Attachment is obsolete: true
Attachment #8430273 - Flags: review?(vchang)
Comment on attachment 8430273 [details] [diff] [review] v2 Review of attachment 8430273 [details] [diff] [review]: ----------------------------------------------------------------- Looks good, thank you.
Attachment #8430273 - Flags: review?(vchang) → review+
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → 2.0 S3 (6june)
Whiteboard: [cr 661502] → [caf priority: p2][cr 661502]
Flags: in-moztrap?(bzumwalt)
No STR is present to create test case to address bug.
QA Whiteboard: [QAnalyst-Triage?]
Flags: needinfo?(ktucker)
QA Whiteboard: [QAnalyst-Triage?] → [QAnalyst-Triage+]
Flags: needinfo?(ktucker)
Flags: in-moztrap?(bzumwalt)
Flags: in-moztrap-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: