Bug 1016022 - Restart softap when the link goes down unexpectedly. r=vchang, a=1.4+